# native_activity

./: .gitignore  README.txt  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: glue.cpp  glue.h
app/src/main/cpp/algebra/: matrix2.h  matrix3.h  matrix4.h  quaternion.h  vector.h  vector2.h  vector3.h  vector4.h
app/src/main/cpp/image/: color.h
app/src/main/cpp/log/: log.h
app/src/main/cpp/render/: render.cpp  render.h
app/src/main/cpp/render/gl/: main_loop.cpp  rendergl.cpp  rendergl.h
app/src/main/cpp/render/vk/: command_pool.cpp  context.h  device.cpp  instance.cpp  instance.h  main_loop.cpp  present.cpp  rendervk.cpp  rendervk.h  surface.cpp  surface.h  swapchain.cpp
app/src/main/cpp/render/vk/commands/: commands.cpp  commands.h  scene_render_command.cpp  scene_render_command.h
app/src/main/cpp/render/vk/pipelines/: pipeline.cpp  pipeline.h  pipeline_matrix_ready.cpp  program.cpp  program.h  renderpass.cpp  renderpass.h  shader_source.h  shader_storage.cpp  shader_storage.h
app/src/main/kotlin/another/tiny_render/: TestLibrary.kt  TinyRender.kt
app/src/main/kotlin/nativeActivity/: Render.kt  TestLibrary.kt
app/src/main/kotlin/native_activity/: Render.kt  TestLibrary.kt
app/src/main/res/layout/: main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
